firefox-trunk (88.0~a1~hg20210222r568163-0ubuntu1) UNRELEASED; urgency=medium

  * 

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Sun, 21 Feb 2021 18:22:19 +0100

firefox-trunk (87.0~a1~hg20210221r568163-0ubuntu1) hirsute; urgency=emergency

  [ Rico Tzschichholz ]
  * Vendor dump_syms v0.0.7 and its dependencies in the source tarball
    - debian/build/create-tarball.py
    - debian/build/rules.mk
    - debian/config/mozconfig.in
    - debian/config/tarball.conf
  * Build-dep on libssl-dev as dump_syms dependency
    - debian/control{,.in}
  * Let cbindgen and dump_syms use clang where needed
    - debian/build/rules.mk
  * Update cbindgen to 0.17.0
    - debian/build/create-tarball.py
  * Add Silesian language pack
    - update debian/config/locales.all
    - update debian/config/locales.shipped
    - update debian/control
  * Drop upstreamed patches
    - debian/patches/s390x-fix-hidden-symbol.patch
  * Update patches
    - debian/patches/armhf-reduce-linker-memory-use.patch

  [ Olivier Tilloy ]
  * Reduce the LTO level (to "thin") on armhf to work around OOM failures on
    Launchpad builders
    - debian/build/rules.mk
    - debian/patches/armhf-rustc-thin-lto.patch

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Sun, 21 Feb 2021 13:56:30 +0100

firefox-trunk (86.0~a1~hg20210123r564375-0ubuntu1) hirsute; urgency=medium

  [ Rico Tzschichholz ]
  * Update cbindgen to 0.16.0
    - debian/build/create-tarball.py
  * Update patches
    - debian/patches/armhf-do-not-build-qcms-with-neon.patch

  [ Olivier Tilloy ]
  * Remove patches that are no longer needed
    - debian/patches/fix-make-package-tests-without-webrtc.patch
    - debian/patches/ppc-no-static-sizes.patch
    - debian/patches/s390x-workaround-sqlite3-clang-optimization-hang.patch

 -- Rico Tzschichholz <ricotz@ubuntu.com>  Sat, 23 Jan 2021 22:38:24 +0100

firefox-trunk (85.0~a1~hg20201213r560450-0ubuntu1) hirsute; urgency=medium

  * Bump build-dep on rustc >= 1.47.0 and cargo >= 0.47