@@ -39,9 +39,9 @@ Build-Depends: cdbs,
 	xvfb,
 	python3 (>= 3.6),
 	libffi-dev (>= 3.0.9) [powerpc ppc64el s390x],
-	clang-11 | clang-10 | clang-8,
-	libclang-11-dev | libclang-10-dev | libclang-8-dev,
-	llvm-11-dev | llvm-10-dev | llvm-8-dev,
+	clang-12 | clang-11 | clang-10 | clang-8,
+	libclang-12-dev | libclang-11-dev | libclang-10-dev | libclang-8-dev,
+	llvm-12-dev | llvm-11-dev | llvm-10-dev | llvm-8-dev,
 	cargo (>= 0.47),
 	rustc (>= 1.47.0),
 	nodejs (>= 10.21) | nodejs-mozilla (>= 10.21),
