@@ -1,6 +1,8 @@
 firefox-trunk (88.0~a1~hg20210222r568163-0ubuntu1) UNRELEASED; urgency=medium
 
-  * 
+  * Use clang 12 if available
+    - debian/control{,.in}
+    - debian/build/rules.mk
 
  -- Rico Tzschichholz <ricotz@ubuntu.com>  Sun, 21 Feb 2021 18:22:19 +0100
 
